2017-03-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve potential <winbase.h> vs. <winerror.h> inconsistency.

	* include/winerror.h: Tidy layout; assert copyright.

	* include/winbase.h (WAIT_TIMEOUT): Redefine; make it identical to...
	* include/winerror.h (WAIT_TIMEOUT): ...this equivalent; remove...
	[!defined WAIT_TIMEOUT]: ...this conditional redefinition guard from
	both locations; it permitted inconsistency between the two.

2017-03-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Consolidate <winbase.h> version specific conditionals.

	* include/winbase.h: Reorganize file content; group manifest constant
	definitions into one nested collection of conditional blocks, with one
	block per Windows version evolution, sorting alphabetically within each
	block; do likewise for data type definitions and function prototypes.

2017-03-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Tidy, and make <winbase.h> header effectively self-contained.

	* include/w32api.h (__AW_ALIAS__): Rename original implementation...
	(__AW_ALIAS_EX__): ...as this, retaining its encapsulation of...
	(__AW_EXTENDED__): ...this; subsequently reimplement...
	(__AW_ALIAS__): ...this, with original name, now encapsulating...
	(__AW_SUFFIXED__): ...this.

	* include/dbt.h (__AW_ALIAS__): Replace all references with...
	(__AW_ALIAS_EX__): ...this renamed alternative, when defining...
	(DEV_BROADCAST_DEVICEINTERFACE, PDEV_BROADCAST_DEVICEINTERFACE)
	(DEV_BROADCAST_PORT, PDEV_BROADCAST_PORT): ...these.

	* include/winbase.h: Tidy layout; assert copyright.
	(stdarg.h, windef.h): Include them, to achieve self-containment.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them, as appropriate.
	[UNICODE vs. ! UNICODE]: Replace separated declarations; use...
	[__AW_ALIAS__]: ...this, to correctly specify each of...
	(STARTUPINFO, LPSTARTUPINFO, WIN32_FIND_DATA, PWIN32_FIND_DATA)
	(LPWIN32_FIND_DATA, HW_PROFILE_INFO, LPHW_PROFILE_INFO, ACTCTX)